@@ -3,10 +3,10 @@ name: Build and Publish to APT
 on:
   pull_request:
     branches:
-      - release/8.0
+    - release/8.*
   push:
     branches:
-    - release/8.0
+    - release/8.*
 
 jobs:
   build-source-package:
@@ -247,7 +247,7 @@ jobs:
           curl -sLO https://github.com/deb-s3/deb-s3/releases/download/${{ env.DEB_S3_VERSION }}/deb-s3-${{ env.DEB_S3_VERSION }}.gem
           gem install deb-s3-${{ env.DEB_S3_VERSION }}.gem
     - name: Upload packages
-      if: github.ref == 'refs/heads/release/8.0'
+      if: github.event_name == 'push'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.APT_S3_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.APT_S3_SECRET_ACCESS_KEY }}
