@@ -1,3 +1,9 @@
+redis (6:8.2.0-1rl1~@RELEASE@1) @RELEASE@; urgency=low
+
+  * Redis 8.2.0: https://github.com/redis/redis/releases/tag/8.2.0
+
+ -- Redis Team <redis@redis.io>  Mon, 04 Aug 2025 16:39:20 +0300
+
 redis (6:8.0.3-1rl1~@RELEASE@1) @RELEASE@; urgency=low
 
   * Redis 8.0.3: https://github.com/redis/redis/releases/tag/8.0.3
